--- a/Travel/travel website/index.html
+++ b/Travel/travel website/index.html
@@ -24,7 +24,7 @@
     <!-- <a href="#" class="logo"> <i class="fas fa-hiking"></i> travel. </a> -->
     <img src="images/travel house logo.JPG" style="width: 15rem;">
 
-    <nav class="navbar" style="width: 35%;">
+    <nav class="navbar" style="margin: auto;">
         <div id="nav-close" class="fas fa-times"></div>
         <a href="#home">home</a>
         <a href="#about">about</a>
