--- a/Travel/travel website/index.html
+++ b/Travel/travel website/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./images/travel_house_logo-removebg-preview.png">
     <title> Travel House Online</title>
 
     <!-- font awesome cdn link  -->
@@ -18,11 +19,12 @@
 <body>
     
 <!-- header section starts  -->
+<div class="progress"></div>
 
 <header class="header">
 
     <!-- <a href="#" class="logo"> <i class="fas fa-hiking"></i> travel. </a> -->
-    <img src="images/travel house logo.JPG" style="width: 15rem;">
+    <img src="images/travel_house_logo-removebg-preview.png" style="width: 15rem;">
 
     <nav class="navbar" style="margin: auto;">
         <div id="nav-close" class="fas fa-times"></div>
@@ -58,6 +60,7 @@
 
 <!-- home section starts  -->
 
+
 <section class="home" id="home">
 
     <div class="swiper home-slider">
@@ -74,6 +77,8 @@
                     </div>
                 </div>
             </div>
+
+
 
             <div class="swiper-slide">
                 <div class="box second" style="background: url(images/home-bg-2.jpg) no-repeat;">
@@ -102,6 +107,19 @@
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
 
+
+    </div>
+    <div class="contactbox" id="cardbox">
+        <button class="contacthover" onclick="buttonopen()">
+            <p>Contact Us</p>
+        </button>
+        <form action="">
+            <input type="text" placeholder='Enter your name' />
+            <input type="email" placeholder='Enter your E-mail Address' />
+            <input type='number' placeholder='Enter your Phone Number' />
+            <textarea name="" placeholder='Enter your Feedback' id="" cols="30" rows="5"></textarea>
+            <button class="contactsub">Submit</button>
+        </form>
     </div>
 
 </section>
@@ -299,7 +317,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <h3>Greater Chennai Corporation</h3>
+                    <h3> Chennai Corporation</h3>
                     <div class="price"> Rs 100 - Rs 5000 </div>
                     <div class="stars">
                         <i class="fas fa-star"></i>
@@ -503,21 +521,21 @@
         <div class="box">
             <img src="images/serv-1.png" alt="">
             <h3>complete guide</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
+            <p>We Have Offer to Give Complete Guide About Tours and Travel Like Where you want to go There will be a Good Complete guide given from Travel House !</p>
             <a href="#" class="btn">read more</a>
         </div>
 
         <div class="box">
             <img src="images/serv-2.png" alt="">
-            <h3>custom packages</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
+            <h3>Tours  packages</h3>
+            <p>In this Field We Have To Show Better Place Just You Can't imagine Like This place we Have offer to You At The Time of Tours Package!, From our Travel Partner!</p>
             <a href="#" class="btn">read more</a>
         </div>
 
         <div class="box">
             <img src="images/serv-3.png" alt="">
-            <h3>family trips</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, nihil?</p>
+            <h3>Bulk Booking</h3>
+            <p>And This Current Situation , At Peak Times We have been Offer Bulk Ticket in Bus , Train , Flight , We Do with best and Cheap Rate , & Some Coupon alsooo!</p>
             <a href="#" class="btn">read more</a>
         </div>
 
@@ -572,8 +590,8 @@
             <div class="swiper-slide slide">
                 <img src="images/img-2.jpg" alt="">
                 <div class="icons">
-                    <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2021 </a>
-                    <a href="#"> <i class="fas fa-user"></i> by admin </a>
+                    <a href="#"> <i class="fas fa-calendar"></i> 21st may, 2020 </a>
+                    <a href="#"> <i class="fas fa-user"></i> by Melina </a>
                 </div>
                 <h3>blog title goes here.</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, deserunt.</p>
@@ -640,7 +658,7 @@
         <h1 class="heading">subscirbe now</h1>
         <p>Subscribe to Get Update With Latest Coupon and Offer to You! , And Update with Some Interest Fact of Blogs , once-in-a-Lifetime Deal! </p>
         <form action="">
-            <input type="email" name="" placeholder="enter your email" id="" class="email">
+            <input type="email" name="" placeholder="Enter your email" id="" class="email">
             <input type="submit" value="subscirbe" class="btn">
         </form>
     </div>
@@ -704,6 +722,7 @@
         </div>
 
     </div>
+    
 
     <div class="credit">created by <span>Travel House</span> | all rights reserved!</div>
 
